--- a/client/src/components/rjd/rjd.sass.scss
+++ b/client/src/components/rjd/rjd.sass.scss
@@ -20,7 +20,6 @@
       background: rgb(60, 60, 60);
     }
   }
-
 }
 
 .react-js-diagrams-canvas {
@@ -109,7 +108,8 @@
 
   .basic-node {
     background-color: rgb(30,30,30);
-    border-radius: 5px;
+    border-radius: 50px / 100px;
+    padding: 8px;
     font-family:Arial;
     color: white;
     border: solid 2px black;
@@ -163,6 +163,12 @@
           justify-content: flex-end;
           text-align: right;
         }
+      }
+      .center {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
       }
     }
   }
