--- a/client/src/components/view/diagram.sass.scss
+++ b/client/src/components/view/diagram.sass.scss
@@ -1,6 +1,6 @@
 .diagram-root {
-	width: 800px;
-	height: 600px;
+	width: 1400px;
+	height: 1050px;
 	background: rgb(60,60,60);
 	display: flex;
 }
@@ -76,6 +76,17 @@
         border-color:rgb(0,192,255) !important;
         -webkit-filter: drop-shadow( 0 0 20px rgba(0,192,255,0.5));
       }
+      >*:before {
+        border-color:rgb(0,192,255) !important;
+        -webkit-filter: drop-shadow( 0 0 20px rgba(0,192,255,0.5));
+      }
+      >*:after {
+        border-color:rgb(0,192,255) !important;
+        -webkit-filter: drop-shadow( 0 0 20px rgba(0,192,255,0.5));
+      }
+      >* > svg.border > path {
+        stroke: rgb(0,192,255) !important;
+      }
     }
   }
 
@@ -88,19 +99,6 @@
     }
   }
 
-  path {
-    fill:none;
-    pointer-events:all;
-    stroke: black;
-    stroke-width: 3;
-
-    &.selected {
-      stroke: rgb(0,192,255) !important;
-      stroke-dasharray: 10,2;
-      animation: dash 1s linear infinite;
-    }
-  }
-
   .port {
     width: 15px;
     height: 15px;
@@ -110,92 +108,40 @@
     }
   }
 
-  .basic-node {
-    background-color: rgb(30,30,30);
-    border-radius: 50px / 100px;
-    padding: 8px;
-    font-family:Arial;
-    color: white;
-    border: solid 2px black;
-    overflow: visible;
-    font-size: 11px;
-    box-shadow: 0 0 10px rgba(black,0.5);
-
-    .title {
-      background: rgba(black,0.3);
-      display: flex;
-      white-space: nowrap;
-      >* {
-        align-self: center;
-      }
-      .fa {
-        padding: 5px;
-        opacity: 0.2;
-        cursor: pointer;
-
-        &:hover {
-          opacity: 1.0;
-        }
-      }
-      .name {
-        flex-grow: 1;
-        padding: 5px 5px;
-      }
-    }
-
-    .ports {
-      display: flex;
-      background-image: linear-gradient(rgba(black,0.1),rgba(black,0.2));
-      .in, .out {
-        flex-grow: 1;
-        display: flex;
-        flex-direction: column;
-      }
-      .in-port, .out-port {
-        display: flex;
-        margin-top: 1px;
-        >* {
-          align-self: center;
-        }
-        .name {
-          padding: 0 5px;
-        }
-      }
-      .out-port {
-        justify-content: flex-end;
-        .name {
-          justify-content: flex-end;
-          text-align: right;
-        }
-      }
-      .center {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-      }
-    }
-  }
-
   svg.link-view {
+
+    path {
+      fill:none;
+      pointer-events:all;
+      stroke: black;
+      stroke-width: 1;
+
+      &.selected {
+        stroke: rgb(0,192,255) !important;
+        stroke-dasharray: 10,2;
+        animation: dash 1s linear infinite;
+      }
+    }
+
     //@import 'nodes/svg.nodes';
     @import 'edges/svg.edges';
+
   }
 
   div.node {
     @import 'nodes/div.nodes';
     div.a-node {
 
-      padding: 8px;
+      padding: 5px;
       font-family: Arial;
       overflow: visible;
-      font-size: 11px;
+      font-size: 10px;
       //box-shadow: 0 0 10px rgba(black, 0.5);
       width: 100%;
       height: 100%;
 
       .title {
-        background: rgba(black, 0.1);
+        background-color: rgba(black, 0.1);
         height: 100%;
         width: 100%;
 
@@ -215,7 +161,7 @@
         }
         .name {
           flex-grow: 1;
-          padding: 5px 5px;
+          padding: 0px 1px;
 
           text-align: center;
           overflow: hidden;
@@ -238,8 +184,9 @@
         position: absolute;
         left: 0;
         top: 0;
-        right: 0;
-        bottom: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
       }
 
     }
