--- a/client/src/components/view/diagram/DiagramWidget.sass.scss
+++ b/client/src/components/view/diagram/DiagramWidget.sass.scss
@@ -16,31 +16,6 @@
 
 }
 
-.parent-container {
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-
-  .diagram-drop-container {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-
-    .diagrams-canvas {
-      flex: 1;
-      background: rgb(60, 60, 60);
-
-      .diagram-center {
-        position: relative;
-        left: 50%;
-        top: 50%;
-        width: 100%;
-        height: 100%;
-      }
-    }
-  }
-}
-
 .diagrams-canvas {
 
   color: black;
@@ -55,6 +30,14 @@
   flex-grow: 1;
   display: flex;
   overflow: hidden;
+
+  .diagram-center {
+    position: relative;
+    left: 50%;
+    top: 50%;
+    width: 100%;
+    height: 100%;
+  }
 
   .selector {
     position: absolute;
@@ -191,64 +174,59 @@
 
       }
     }
-
-    //@import 'nodes/svg.nodes';
-    @import 'edges/svg.edges';
-
   }
 
-  div.x-node {
-    @import 'nodes/div.nodes';
-    div.a-node {
+  .x-node  {
 
+    > div.basic-node {
       padding: 5px;
       font-family: Arial;
       overflow: visible;
       font-size: 10px;
-      //box-shadow: 0 0 10px rgba(black, 0.5);
       width: 100%;
       height: 100%;
-
-      .title {
-        background-color: rgba(black, 0.1);
-        height: 100%;
-        width: 100%;
-
-        display: flex;
-        white-space: nowrap;
-        > * {
-          align-self: center;
-        }
-        .fa {
-          padding: 5px;
-          opacity: 0.2;
-          cursor: pointer;
-
-          &:hover {
-            opacity: 1.0;
-          }
-        }
-        .name {
-          flex-grow: 1;
-          padding: 0px 1px;
-
-          text-align: center;
-          overflow: hidden;
-          text-overflow: ellipsis;
-        }
-      }
-
-      svg.border {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-      }
-
     }
+
+    .title {
+      background-color: rgba(black, 0.1);
+      height: 100%;
+      width: 100%;
+
+      display: flex;
+      white-space: nowrap;
+      > * {
+        align-self: center;
+      }
+      .fa {
+        padding: 5px;
+        opacity: 0.2;
+        cursor: pointer;
+
+        &:hover {
+          opacity: 1.0;
+        }
+      }
+      .name {
+        flex-grow: 1;
+        padding: 0px 1px;
+
+        text-align: center;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+    }
+
+    svg.border {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
   }
+
 
   .x-node > .resize {
 
@@ -302,8 +280,6 @@
       bottom: -6px;
       cursor: se-resize;
     }
-
   }
-
 }
 
