--- a/client/src/components/view/ViewDiagram.sass.scss
+++ b/client/src/components/view/ViewDiagram.sass.scss
@@ -38,6 +38,7 @@
       margin: -5px;
 
       > textarea {
+        text-align: center;
         font-size: 10px;
         outline: none !important;
         border: 0;
