Relations initial commit

--- a/client/src/components/view/ViewDiagram.sass.scss
+++ b/client/src/components/view/ViewDiagram.sass.scss
@@ -52,3 +52,14 @@
 
 }
 
+.diagram-root {
+
+  div.link-menu {
+    pointer-events: all;
+    position: absolute;
+    z-index: 1300; // interface z-index
+    //border: 1px solid black;
+    //background-color: white;
+  }
+
+}
