--- a/client/src/components/view/ViewDiagram.sass.scss
+++ b/client/src/components/view/ViewDiagram.sass.scss
@@ -58,7 +58,7 @@
     pointer-events: all;
     position: absolute;
     z-index: 1300; // interface z-index
-    //border: 1px solid black;
+    border: 1px solid black;
     //background-color: white;
   }
 
