--- a/client/src/components/view/edges/svg.edges.scss
+++ b/client/src/components/view/edges/svg.edges.scss
@@ -7,6 +7,12 @@
   }
 }
 
+.viewConnection {
+  path.p {
+    stroke: rgb(192, 192, 192) !important;
+  }
+}
+
 .compositionRelationship {
   g.first {
     path.p {
