--- a/client/src/components/view/diagram/DiagramWidget.sass.scss
+++ b/client/src/components/view/diagram/DiagramWidget.sass.scss
@@ -194,9 +194,12 @@
 
       display: flex;
       white-space: nowrap;
+      overflow: hidden;
+
       > * {
         align-self: center;
       }
+
       .fa {
         padding: 5px;
         opacity: 0.2;
@@ -206,6 +209,7 @@
           opacity: 1.0;
         }
       }
+
       .name {
         flex-grow: 1;
         padding: 0px 1px;
