--- a/client/src/components/view/edges/svg.edges.scss
+++ b/client/src/components/view/edges/svg.edges.scss
@@ -1,3 +1,4 @@
+
 .viewPrototypeLink {
   path.p {
     stroke: rgb(192, 255, 255) !important;
@@ -13,7 +14,22 @@
   }
 }
 
+.relationship {
+  text {
+    > textpath {
+      fill: lightgray;
+    }
+    cursor: default;
+    pointer-events: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+}
+
 .compositionRelationship {
+  @extend .relationship;
   g.first {
     path.p {
       marker-start: url(#MarkerCompositionArrowSrc);
@@ -22,6 +38,7 @@
 }
 
 .aggregationRelationship {
+  @extend .relationship;
   g.first {
     path.p {
       marker-start: url(#MarkerAggregationArrowSrc);
@@ -30,6 +47,7 @@
 }
 
 .assignmentRelationship {
+  @extend .relationship;
   g.first {
     path.p {
       marker-start: url(#MarkerAssignmentArrowSrc);
@@ -43,6 +61,7 @@
 }
 
 .realizationRelationship {
+  @extend .relationship;
   path.p {
     stroke-dasharray: 4, 4;
   }
@@ -54,6 +73,7 @@
 }
 
 .servingRelationship {
+  @extend .relationship;
   path.p {
     stroke-width: 0.5 !important;
   }
@@ -65,6 +85,10 @@
 }
 
 .influenceRelationship {
+  @extend .relationship;
+  textpath.plus { fill: lightgreen; }
+  textpath.minus { fill: red; }
+
   path.p {
     stroke-dasharray: 4, 2;
   }
@@ -76,6 +100,7 @@
 }
 
 .accessRelationship {
+  @extend .relationship;
   path.p {
     stroke-dasharray: 1, 2;
   }
@@ -92,6 +117,7 @@
 }
 
 .flowRelationship {
+  @extend .relationship;
   path.p {
     stroke-dasharray: 4, 2;
   }
@@ -103,6 +129,7 @@
 }
 
 .triggeringRelationship {
+  @extend .relationship;
   g.last {
     path.p {
       marker-end: url(#MarkerTriggerArrowDst);
@@ -111,6 +138,7 @@
 }
 
 .specializationRelationship {
+  @extend .relationship;
   g.last {
     path.p {
       marker-end: url(#MarkerSpecializationArrowDst);
