--- a/client/src/components/view/edges/svg.edges.scss
+++ b/client/src/components/view/edges/svg.edges.scss
@@ -1,4 +1,3 @@
-
 .viewPrototypeLink {
   path.p {
     stroke: rgb(192, 255, 255) !important;
@@ -10,26 +9,11 @@
 
 .viewConnection {
   path.p {
-    stroke: rgb(192, 192, 192) !important;
-  }
-}
-
-.relationship {
-  text {
-    > textpath {
-      fill: lightgray;
-    }
-    cursor: default;
-    pointer-events: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    stroke: lightgray !important;
   }
 }
 
 .compositionRelationship {
-  @extend .relationship;
   g.first {
     path.p {
       marker-start: url(#MarkerCompositionArrowSrc);
@@ -38,7 +22,6 @@
 }
 
 .aggregationRelationship {
-  @extend .relationship;
   g.first {
     path.p {
       marker-start: url(#MarkerAggregationArrowSrc);
@@ -47,7 +30,6 @@
 }
 
 .assignmentRelationship {
-  @extend .relationship;
   g.first {
     path.p {
       marker-start: url(#MarkerAssignmentArrowSrc);
@@ -61,7 +43,6 @@
 }
 
 .realizationRelationship {
-  @extend .relationship;
   path.p {
     stroke-dasharray: 4, 4;
   }
@@ -73,7 +54,6 @@
 }
 
 .servingRelationship {
-  @extend .relationship;
   path.p {
     stroke-width: 0.5 !important;
   }
@@ -85,8 +65,7 @@
 }
 
 .influenceRelationship {
-  @extend .relationship;
-  textpath.plus { fill: lightgreen; }
+  textpath.plus { fill: lime; }
   textpath.minus { fill: red; }
 
   path.p {
@@ -100,7 +79,6 @@
 }
 
 .accessRelationship {
-  @extend .relationship;
   path.p {
     stroke-dasharray: 1, 2;
   }
@@ -117,7 +95,6 @@
 }
 
 .flowRelationship {
-  @extend .relationship;
   path.p {
     stroke-dasharray: 4, 2;
   }
@@ -129,7 +106,6 @@
 }
 
 .triggeringRelationship {
-  @extend .relationship;
   g.last {
     path.p {
       marker-end: url(#MarkerTriggerArrowDst);
@@ -138,7 +114,6 @@
 }
 
 .specializationRelationship {
-  @extend .relationship;
   g.last {
     path.p {
       marker-end: url(#MarkerSpecializationArrowDst);
@@ -146,14 +121,18 @@
   }
 }
 
+.associationRelationship {
+  textpath { fill: burlywood  !important; }
+}
+
 .invalid {
   path.p {
-    stroke: rgb(192, 0, 0) !important;
+    stroke: brown  !important;
   }
 }
 
 .derived {
   path.p {
-    stroke: rgb(192, 192, 0) !important;
+    stroke: darkorange !important;
   }
 }
