--- a/client/src/components/view/nodes/div.nodes.scss
+++ b/client/src/components/view/nodes/div.nodes.scss
@@ -644,10 +644,10 @@
   > svg.border > path {
     fill: #c9ffc9;
   }
-  > .title {
-    background: rgba(black, 0.1) url('/media/node-node.png') no-repeat top right !important;
-    background-size: 29px !important;
-  }
+  //> .title {
+  //  background: rgba(black, 0.1) url('/media/node-node.png') no-repeat top right !important;
+  //  background-size: 29px !important;
+  //}
 }
 
 .device {
