diagram rendering optimizations

--- a/client/src/components/view/edges/svg.edges.scss
+++ b/client/src/components/view/edges/svg.edges.scss
@@ -3,7 +3,7 @@
     stroke: rgb(192, 255, 255) !important;
     stroke-width: 1;
     stroke-dasharray: 10, 2;
-    animation: dash 1s linear infinite;
+    // animation: dash 1s linear infinite;
   }
 }
 
