--- a/client/src/components/view/diagram/DiagramWidget.sass.scss
+++ b/client/src/components/view/diagram/DiagramWidget.sass.scss
@@ -1,5 +1,8 @@
 .diagram-root {
 
+  font-family: Arial;
+  font-size: 10px;
+
   touch-action: none;
 
   width: 100%;
@@ -17,6 +20,9 @@
 }
 
 .diagrams-canvas {
+
+  font-family: Arial;
+  font-size: 10px;
 
   color: black;
 
@@ -87,38 +93,34 @@
     }
   }
 
-  @keyframes dash {
-    from {
-      stroke-dashoffset: 24;
-    }
-    to {
-      stroke-dashoffset: 0;
-    }
-  }
+  //@keyframes dash {
+  //  from {
+  //    stroke-dashoffset: 24;
+  //  }
+  //  to {
+  //    stroke-dashoffset: 0;
+  //  }
+  //}
 
   svg.link-view {
+
+    text {
+      > textpath {
+        fill: lightgray;
+      }
+      cursor: default;
+      pointer-events: none;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
 
     rect.x-port {
       pointer-events: all;
       fill: rgba(white,0.1);
       &:hover {
         fill: rgba(192,255,0,0.25);
-      }
-    }
-
-    g.link {
-      text {
-        > textpath {
-          font-family: Arial;
-          font-size: 10px;
-          fill: lightgray;
-        }
-        cursor: default;
-        pointer-events: none;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
       }
     }
 
@@ -131,11 +133,8 @@
         &.p {
           stroke-linecap: round;
           stroke-width: 1;
-
           &.selected {
             stroke: rgb(0, 192, 255) !important;
-            //stroke-dasharray: 10, 2;
-            //animation: dash 1s linear infinite;
           }
         }
 
@@ -188,9 +187,7 @@
 
     > div.basic-node {
       padding: 5px;
-      font-family: Arial;
-      overflow: visible;
-      font-size: 10px;
+      //overflow: visible;
       width: 100%;
       height: 100%;
     }
@@ -202,7 +199,6 @@
 
       display: flex;
       white-space: nowrap;
-      overflow: hidden;
 
       > * {
         align-self: center;
@@ -223,7 +219,7 @@
         padding: 0px 1px;
 
         text-align: center;
-        overflow: hidden;
+        overflow: hidden; // This is the root of the eavel with rendering performance
         text-overflow: ellipsis;
       }
     }
@@ -238,7 +234,6 @@
     }
 
   }
-
 
   .x-node > .resize {
 
