#56 Edit mode for edge titles

--- a/archimate-frontend/src/main/javascript/components/view/ViewDiagram.sass.scss
+++ b/archimate-frontend/src/main/javascript/components/view/ViewDiagram.sass.scss
@@ -20,6 +20,14 @@
 
   svg.link-view {
     @import 'edges/svg.edges';
+
+    textarea {
+      text-align: center;
+      font-size: 10px;
+      outline: none !important;
+      border: 0;
+    }
+
   }
 
   div.x-node {
